--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
             <div class="container">
                 <div class="resume__block">
-                    <h1 class="contact-info__header">Bulka</h1>
-                    <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+                    <h1 class="contact-info__header">Oleh Karapysh</h1>
+                    <h3 class="contact-info__sub-header">.NET Developer</h3>
                     <div class="contact_info_container fh">
                         <div class="contact-info__block">
                             <a href="" rel="author" class="contact-info__item">
@@ -62,10 +62,12 @@
                                 </path>
                             </svg>
                         </div>
-                        <p class="intro_text">Meow.
-                            I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil,
-                            all I do is sleep and try to help out hoomans with their projects whenever
-                            they need me.
+                        <p class="intro_text">
+                            Highly motivated and passionate student with a strong enthusiasm
+                            for modern IT and a keen interest in developing high-quality code.
+                            Eager to embark on a career in the field of technology, I am actively
+                            seeking opportunities that will challenge me and allow me to grow as a
+                            skilled professional.
                         </p>
                     </div>
                 </div>
