--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <title>Résumé</title>
+    <script src="https://kit.fontawesome.com/70ff7a5ea5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -18,7 +19,14 @@
                     <h3 class="contact-info__sub-header">.NET Developer</h3>
                     <div class="contact_info_container fh">
                         <div class="contact-info__block">
-                            <a href="" rel="author" class="contact-info__item">
+                            <a class="contact-info__item">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <i class="fa-solid fa-user"></i>
+                                </div>
+                                <span>21 y.o.</span>
+                            </a>
+                            <a href="https://www.google.com/maps/place/Dnipro,+Dnipropetrovsk+Oblast,+49000/@48.4622985,35.0003565,11z/data=!3m1!4b1!4m6!3m5!1s0x40dbe303fd08468f:0xa1cf3d5f2c11aba!8m2!3d48.464717!4d35.046183!16zL20vMDN4NDVw?entry=ttu"
+                                rel="author" class="contact-info__item">
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 384 512">
@@ -27,26 +35,44 @@
                                         </path>
                                     </svg>
                                 </div>
-                                <span>Lviv, Ukraine</span>
+                                <span>Dnipro, Dnipropetrovsk Oblast</span>
                             </a>
-                            <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author"
+                            <a href="https://www.linkedin.com/in/oleh-karapysh/" rel="author"
                                 class="contact-info__item">
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
-                                        viewBox="0 0 448 512">
+                                        viewBox="0 0 512 512">
                                         <path
                                             d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
                                         </path>
                                     </svg>
                                 </div>
-                                <span>binary-studio</span>
+                                <span>Linkedin profile</span>
                             </a>
                         </div>
                         <div class="contact-info__block contact-info__block--center">
                             <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
                         </div>
                         <div class="contact-info__block">
-
+                            <a href="mailto:sebastianvell777@gmail.com" rel="author" class="contact-info__item"
+                                target="_blank">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <i class="fa-solid fa-envelope"></i>
+                                </div>
+                                <span>sebastianvell777@gmail.com</span>
+                            </a>
+                            <a class="contact-info__item">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <i class="fa-solid fa-phone-volume"></i>
+                                </div>
+                                <span>+380 (997) 365 740</span>
+                            </a>
+                            <a href="https://t.me/camel_lion_child" class="contact-info__item" rel="author">
+                                <div class="contact-info__item-icon-wrapper">
+                                    <i class="fa-brands fa-telegram"></i>
+                                </div>
+                                <span>Telegram profile</span>
+                            </a>
                         </div>
                     </div>
                 </div>
