Added my skills to resume

--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
                 <div class="resume__block">
                     <div class="skills">
                         <h3 class="skills__header">Skills</h3>
-                        <p class="skills__text">Sleep, eat, more sleep, meow, mrrr, purr. </p>
+                        <p class="skills__text"><strong>Languages: </strong>
+                            C#, SQL, JavaScript, HTML+CSS</p>
+                        <p class="skills__text"><strong>Technologies: </strong>
+                            ASP.NET Core, WPF, EF Core, xUnit, MS SQL Server</p>
+                        <p class="skills__text"><strong>Comprehension: </strong>
+                            OOP, Design Patterns, MVC, MVVM, DDD, SOLID, DRY, KISS, YAGNI</p>
                     </div>
                 </div>
             </div>
