--- a/index.html
+++ b/index.html
@@ -120,18 +120,21 @@
                             <h3 class="experiences__header">Experience</h3>
                             <div class="experiences__company">
                                 <div class="experiences__company-header">
-                                    <span class="experiences__company-header-durability">For whole my life</span>
-                                    <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                                    <span class="experiences__company-header-durability">March - May 2023 (3
+                                        months)</span>
+                                    <h3 class="experiences__company-header-name">Planetarium Noosphere</h3>
                                 </div>
 
                                 <div class="experiences__company-project">
-                                    <span class="experiences__company-project-role">Binary Studio Cat</span>
-                                    <h3 class="experiences__company-project-name">Hooman project</h3>
+                                    <span class="experiences__company-project-role">Software Developer</span>
+                                    <h3 class="experiences__company-project-name">Game 'Attention Test'</h3>
+                                    <h4 class="experiences__company-project-name">Used technologies:</h4>
                                     <ul class="experiences__company-project-responsibilities">
-                                        <li>Supported hoomans</li>
-                                        <li>Slept all the time</li>
-                                        <li>Lied on the keyboard</li>
-                                        <li>Watched my hoomans working</li>
+                                        <li>WPF</li>
+                                        <li>ASP.NET Core MVC</li>
+                                        <li>Entity Framework Core</li>
+                                        <li>MS SQL Server</li>
+                                        <li>xUnit</li>
                                     </ul>
                                 </div>
                             </div>
