--- a/index.html
+++ b/index.html
@@ -144,9 +144,14 @@
                                 <div class="additional-info__education">
                                     <h3 class="additional-info__education-header">Education</h3>
                                     <div class="additional-info__education-university">
-                                        <span class="additional-info__education-university-durability">2021</span>
-                                        <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                                        <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                                        <span class="additional-info__education-university-durability">September 2019 -
+                                            June 2023</span>
+                                        <h3 class="additional-info__education-university-speciality">Bachelor of
+                                            Computer Science
+                                        </h3>
+                                        <p class="additional-info__education-university-name">
+                                            Oles' Honchar Dnipro National University
+                                        </p>
                                     </div>
                                 </div>
 
