Added my languages to resume

--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
                                 <div class="additional-info__languages">
                                     <h3 class="additional-info__languages-header">Languages</h3>
                                     <p class="additional-info__languages-item">
-                                        Meow dialect
+                                        English (upper-intermediate B2)
                                     </p>
                                     <p class="additional-info__languages-item">
-                                        Ukrainian (understand)
+                                        Ukrainian (native)
                                     </p>
                                     <p class="additional-info__languages-item">
-                                        English (don't understand)
+                                        Russian (native)
                                     </p>
                                 </div>
                             </div>
