--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </a>
                         </div>
                         <div class="contact-info__block contact-info__block--center">
-                            <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
+                            <img class="contact-info__avatar" src="assets/avatar.jpg" alt="Avatar">
                         </div>
                         <div class="contact-info__block">
                             <a href="mailto:sebastianvell777@gmail.com" rel="author" class="contact-info__item"
